# Delta-Compression

./: .gitignore  ANALYSIS.md  HOWTO.md  LICENSE  README.md
pubs/: README.md
src/c/: Makefile  apply.c  correcting.c  delta.h  encoding.c  greedy.c  hash.c  inplace.c  main.c  onepass.c  splay.c  test_delta.sh
src/cpp/: CMakeLists.txt  main.cpp
src/cpp/include/delta/: algorithm.h  apply.h  crc64.h  delta.h  encoding.h  hash.h  inplace.h  sha3.h  splay.h  types.h
src/cpp/src/: apply.cpp  correcting.cpp  crc64.cpp  encoding.cpp  greedy.cpp  hash.cpp  inplace.cpp  onepass.cpp  sha3.cpp
src/cpp/tests/: CMakeLists.txt  test_hash.cpp  test_integration.cpp
src/java/: Makefile
src/java/delta/: Apply.java  Correcting.java  Delta.java  Diff.java  Encoding.java  Greedy.java  Hash.java  Onepass.java  SplayTree.java  TestDelta.java  Types.java
src/python/: delta.py  test_delta.py
src/rust/delta/: Cargo.toml
src/rust/delta/src/: apply.rs  encoding.rs  hash.rs  inplace.rs  lib.rs  main.rs  splay.rs  types.rs
src/rust/delta/src/algorithm/: correcting.rs  greedy.rs  mod.rs  onepass.rs
src/rust/delta/tests/: integration.rs
tests/: burrows-delta.py  correctness.sh  gen_transpositions.py  kernel-delta-test.sh  transposition-benchmark.sh
